--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 APScheduler==3.6.3
+boto3==1.12.39
+botocore==1.15.39
+docutils==0.15.2
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
+jmespath==0.9.5
+python-dateutil==2.8.1
 pytz==2019.3
+s3transfer==0.3.3
 six==1.14.0
 tzlocal==2.0.0
+urllib3==1.25.8
