--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ docutils==0.15.2
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
 idna==2.9
 jmespath==0.9.5
+pandas==0.25.1
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
