--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "expres": "0.0.5",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "pg": "^8.2.1"
   }
 }
